@@ -1,4 +1,7 @@
-SUBDIRS = icon-cache 
+SUBDIRS = \
+	icon-cache \
+	gconf-cache
+
 EXTRA_DIST = \
 	ChangeLog \
 	autogen.sh
