@@ -1,0 +1,1 @@
+- get the icon directory names for this servicefrom smf properties
