@@ -76,6 +76,7 @@ for DIR in /usr/share/icons/*; do
 	-newer $DIR/icon-theme.cache -print 2>/dev/null`
       else
 	RESULT=`/usr/bin/find $DIR -type d`
+	echo "$(RESULT)"
 	if [ ${#RESULT} == ${#DIR} ]; then
 	  echo "$DIR doesn't contain subdirectories.  No icon cache is needed"
 	  RESULT=""
